--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h1>Builiding A CSS Grid</h1>
 
       <div class="row">
-        <div class="col-12">12</div>
+        <div class="offset-4 offset-sm-2 col-12">12</div>
 
-        <div class="col-11">11</div>
+        <div class="col-sm-6">11</div>
         <div class="col-1">1</div>
 
         <div class="col-10">10</div>
